--- a/giaodienform.html
+++ b/giaodienform.html
@@ -20,7 +20,7 @@
     <input type="checkbox" name="gender" value="Nam"><br>
     <label>Nu</label>
     <input type="checkbox" name="gender" value="Nu"><br>
-    <input type="submit">
+    <input type="submit" name="name" name="email" name="phone" name="gender">
 
 </Form>
 </body>
